[package]
name = "kut-tsyb-stego"
version = "0.1.0"
authors = ["Paweł Górski <dev.baymax42@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = "0.8.4"
rand_pcg = "0.3.1"
bitvec = "0.22.3"

[unstable]
unchecked_math = true