[package]
authors = ["Paweł Górski <dev.baymax42@gmail.com>"]
edition = "2018"
name = "kut-tsyb-stego"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
image = "0.24.5"
rand = "0.8.4"
rand_pcg = "0.3.1"

[unstable]
unchecked_math = true
